# PayD

./: .gitattributes  CONTRIBUTING.md  Cargo.toml  DATEPAL_QUICK_REFERENCE.md  FIX_PROPOSAL.md  ISSUES_693_694_779_780_IMPLEMENTATION.md  LOCAL_SETUP_GUIDE.md  MERGE_VERIFICATION.md  QUICK_START.md  README.md  TECHNICAL_WHITEPAPER.md  UI_UX_REFINEMENT_PART_26.md  UI_UX_REFINEMENT_PART_27.md  UI_UX_REFINEMENT_PART_49.md  UI_UX_REFINEMENT_PART_49_GUIDE.md  UI_UX_REFINEMENT_PART_49_IMPLEMENTATION_SUMMARY.md  UI_UX_REFINEMENT_PART_49_VERIFICATION_CHECKLIST.md  eslint.config.js  issue.md  package-lock.json  package.json  pr.md
.cargo/: config.toml
.github/workflows/: build.yml
backend/: EMPLOYEE_API.md  README.md  SOROBAN_EVENT_INDEXING.md  openapi.json
backend/.well-known/: stellar.toml
backend/src/: app.ts  index.ts
contracts/: MAINTENANCE_GUIDE.md  README.md
contracts/bulk_payment/: README.md
contracts/orgusd/: Cargo.toml
contracts/orgusd/src/: lib.rs
contracts/revenue_split/: README.md
contracts/vesting_escrow/: README.md
docs/: COMMUNITY.md  KNOWN_ISSUES.md  SOROBAN_LOGIC_FEATURES.md  STAGING_ISSUES.md
docs/issues/: 002-trustline-flow.md  010-stellar-signing-tests.md  012-db-schema-migrations.md  046-2fa-support.md  101-refine-button-hover-active-states.md  102-implement-skeleton-loaders-for-employee-table.md  103-add-information-tooltips-for-financial-terms.md  104-fix-sidebar-navigation-for-mobile-view.md  (+96 more)
frontend/: eslint.config.js  lint_output.txt  package.json  tsconfig.app.json  tsconfig.eslint.json
scripts/: resequence-migrations.mjs
(+274 files in other folders)
